# dnd-encounter-manager

./: .gitignore  BACKUP_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OPTIMIZATION_PLAN.md  CREATURE-STORAGE-RULES.md  Cargo.toml  DEVELOPMENT.md  DND_ENCOUNTER_MANAGER_ANALYSIS.md  INLINE-COMMENTS-ADDED.md  MODAL-LAZY-LOADING-COMPLETE.md  MODAL-LAZY-LOADING-TEST.md  PERFORMANCE-NOTES.md  README.md  REFACTORING-LOG.md  TESTING.md  config.example.toml  dice-roller.html  features-writeup.md  flake.nix  index.html  jest.config.js  justfile  llms.org  package-lock.json  package.json  run-sample-tests.js  rust-template.json  stat-block-conversion-guide.md  treefmt.toml  vite.config.js
.cargo-husky/: README.md
.cargo-husky/hooks/: pre-commit
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  logging.rs  main.rs
crates/cli/tests/: integration_test.rs
crates/lib/: Cargo.toml
crates/lib/src/: calculation.rs  combat.rs  combatant.rs  creature.rs  dice.rs  encounter.rs  lib.rs  logging.rs  parser.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  auth.rs  config.rs  input.rs  lib.rs  logging.rs  main.rs  store.rs  systemd.rs  tui.rs  web_base.rs
crates/server/src/routes/: creatures.rs  encounters.rs  mod.rs  preferences.rs  state.rs  storage.rs
crates/server/src/views/: combat.rs  compendium.rs  dice.rs  encounters.rs  mod.rs
crates/server/tests/: integration_test.rs
docs/: API.md  ARCHITECTURE.md  CHALLENGE-CALCULATOR-SPEC.md  CREATURE.md  DEPLOYMENT.md  DEVELOPMENT.md  MODULARIZATION-SUMMARY.md  PROMPTS.md  QUICK-TEST.md  TROUBLESHOOTING.md  testing-plan-modularization.md  testing_checklist.md
docs/archive/: CODE_EXAMPLES.md  DOCUMENTATION-MAINTENANCE.md  TEST-STATUS.md
frontend/: dice-roller.html  package.json  vite.config.js
frontend/src/: dice-roller.html  main.js
frontend/src/components/combatant-card/: CombatantCard.js  CombatantManager.js
frontend/src/components/dice-roller/: DiceRoller.js  dice-roller-standalone.css  dice-roller.css
frontend/src/components/stat-block/: stat-block.css
frontend/src/components/toast/: ToastSystem.js
frontend/src/data/creatures/: creature-database.json
frontend/src/scripts/: app-core.js  data-services.js  state-manager.js
frontend/src/scripts/events/: combatant-events.js  creature-handlers.js  creature-modal-events.js  dice-roller-events.js  hp-events.js  import-export-handlers.js  inline-edit-events.js  tooltip-events.js
frontend/src/scripts/services/: api-client.js  calculation-service.js  combat-service.js  combatant-service.js  creature-service.js  index.js  storage-service.js
frontend/src/scripts/state/: index.js  persistent-state.js  ui-state.js
frontend/src/scripts/utils/: dice-link-converter.js  errors.js  initiative-utils.js  render-helpers.js  toast-helpers.js  validators.js
frontend/src/styles/: base.css  utilities.css
frontend/src/templates/: index.html
frontend/src/templates/modals/: combatant-note.html  creature-form.html  creature-type-selection.html  duplicate-combatant.html  edit-player.html  placeholder-timer.html  player-form.html  stat-block-parser.html
frontend/tests/unit/parsers/: stat-block-parser.test.js
frontend/tests/unit/services/: storage-service.test.js  validation-service.test.js.skip
nix/modules/: darwin-server.nix  nixos-server.nix
scripts/: verify-docs.sh
src/: dice-roller.html  main.js
src/components/combatant-card/: CombatantCard.js  CombatantManager.js  combatant-card.css
src/components/dice-roller/: DiceRoller.js  DiceRollerUI.js  dice-roller-standalone.css
src/components/modals/: ModalLoader.js  ModalSystem.js  modal-system.css
src/components/stat-block/: stat-block.css
src/components/toast/: toast.css
src/data/creatures/: creature-database.json
src/scripts/: MODULARIZATION_SUMMARY.md  app-core.js  constants.js  data-services.js  event-handlers.js  state-manager.js
src/scripts/events/: auto-roll-events.js  combat-events.js  combatant-events.js  creature-handlers.js  creature-modal-events.js  dice-roller-events.js  encounter-events.js  form-handlers.js  hp-events.js  import-export-events.js  index.js  initiative-events.js  initiative-manager-events.js  inline-edit-events.js  keyboard-events.js  modal-events.js  recent-items.js  tooltip-events.js
src/scripts/parsers/: stat-block-parser.js
src/scripts/renderers/: html-utils.js  stat-block-renderer.js
src/scripts/services/: calculation-service.js  creature-service.js  storage-service.js  validation-service.js
src/scripts/state/: combat-state.js  combatant-state.js  dice-roller-state.js  persistent-state.js  ui-state.js
src/scripts/utils/: dice-parser.js  error-handler.js  error-handlers.js  logger.js  modal-helpers.js  modal-utils.js  validation.js
src/styles/: animations.css  base.css  layout.css  utilities.css
src/templates/: index.html  standalone-creature.css  standalone-templates.js
src/templates/modals/: add-combatant.html  auto-roll.html  condition.html  creature-database.html  creature-form.html  edit-creature.html  effect.html  hp-modification.html  placeholder-timer.html  player-form.html  quick-initiative.html
tests/: setup.js  test-helpers.js
tests/unit/events/: hp-events.test.js
tests/unit/services/: calculation-service.test.js  storage-service.test.js
