[package]
name = "dnd-encounter-manager-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "dnd-encounter-manager-cli"
path = "src/main.rs"

[dependencies]
dnd-encounter-manager-lib = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }  # For method chaining, reduces superfluous locals

[dev-dependencies]
tempfile = { workspace = true }
