[package]
name = "dnd-encounter-manager-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }  # For method chaining, reduces superfluous locals
rand = "0.8"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
