[package]
name = "dnd-encounter-manager-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "dnd_encounter_manager_server"
path = "src/lib.rs"

[[bin]]
name = "dnd-encounter-manager-server"
path = "src/main.rs"

[dependencies]
dnd-encounter-manager-lib = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tap = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-listener = { workspace = true }
tower-http = { workspace = true }
prometheus = { workspace = true }
sd-notify = { workspace = true }

# tracing-journald connects to the systemd journal socket; unix-only.
[target.'cfg(unix)'.dependencies]
tracing-journald = { workspace = true }

[dev-dependencies]
prometheus = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }
